--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "bevy_game" # ToDo
 version = "0.1.0"
 publish = false
 authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
+license = "CC0-1.0" # ToDo: change to your preferred license
 edition = "2021"
 exclude = ["dist", "build", "assets", "credits"]
 
